<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:gravity="center"
        android:background="#3848A1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Type"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_height="@dimen/_180sdp"
        android:orientation="vertical">

    <TextView
            android:id="@+id/txtamuont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/amount"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"/>

    <TextView
        android:id="@+id/txtcategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/category"
        android:layout_gravity="center_vertical"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"/>
    <TextView
        android:id="@+id/txtdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/date"
        android:layout_gravity="center_vertical"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"/>
    <TextView
        android:id="@+id/txttime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/time"
        android:layout_gravity="center_vertical"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"/>
    <TextView
        android:id="@+id/txtmode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_gravity="center_vertical"
        android:text="@string/mode"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"/>

    <TextView
        android:id="@+id/txtnote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_gravity="center_vertical"
        android:text="@string/note"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"/>
    </LinearLayout>
        </LinearLayout>
