<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:openDrawer="end"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".DashbordActivity">

    <DatePicker
        android:datePickerMode="calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datepicker"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/datecalculator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:weightSum="2"
        android:background="#3F51B5"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgmenu"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:background="@drawable/menu"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:text="Expense Manager"/>

    <ImageView
        android:id="@+id/imgdate"
        android:layout_width="@dimen/_20sdp"
        android:layout_gravity="center_vertical"
        android:layout_height="@dimen/_20sdp"
        android:background="@drawable/calenders"/>

        <ImageView
            android:id="@+id/imgking"
            android:layout_width="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_gravity="center_vertical"
            android:layout_height="@dimen/_20sdp"
            android:background="@drawable/king"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@color/bule"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/category"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_category_title"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/_15ssp"
            android:textColor="#2F4397"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/expense"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="#D5D9F1"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/expenses"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_10sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15ssp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_gravity="center_vertical"
            android:text="@string/add_expense_title"
            android:textStyle="bold"
            android:textColor="#656EA5"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/income"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="@dimen/_60sdp"
        android:background="#EFCCC1"
        android:layout_marginHorizontal="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/income"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/add_income_title"
            android:textColor="#C86343"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/viewtransaction"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="#EABCC3"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/transaction"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/add_transaction_title"
            android:textSize="@dimen/_15ssp"
            android:textColor="#CA7373"/>
    </LinearLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="@dimen/_250sdp"
        android:id="@+id/navigation"
        android:layout_gravity="start"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linhome"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:background="@drawable/home"
                    android:layout_height="30dp"/>

                <TextView
                    android:id="@+id/txthome"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:textSize="@dimen/_15sdp"
                    android:text="Home"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lincalender"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:background="@drawable/calender"
                    android:layout_height="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:textSize="@dimen/_15sdp"
                    android:text="Calaender"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linaddcatagory"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:background="@drawable/categories"
                    android:layout_height="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:textSize="@dimen/_15sdp"
                    android:text="Add Catagory"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linpayment"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:background="@drawable/payment"
                    android:layout_height="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:textSize="@dimen/_15sdp"
                    android:text="Payment Mode"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:background="@drawable/exproted"
                    android:layout_height="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:textSize="@dimen/_15sdp"
                    android:text="Exproted Report"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:background="@drawable/settings"
                    android:layout_height="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:textSize="@dimen/_15sdp"
                    android:text="Setting"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:background="@drawable/lock"
                    android:layout_height="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:textSize="@dimen/_15sdp"
                    android:text="App Lock"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linrate"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:background="@drawable/rate"
                    android:layout_height="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:textSize="@dimen/_15sdp"
                    android:text="Rate The App"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:background="@drawable/feedback"
                    android:layout_height="30dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:textSize="@dimen/_15sdp"
                    android:text="Feedback"/>
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>